Admin pages refactored to admin-layout

--- a/src/main/resources/templates/admin-layout.html
+++ b/src/main/resources/templates/admin-layout.html
@@ -17,6 +17,8 @@
         <div class="page-header">
             <h2 layout:fragment="main-title">Пишем новость</h2>
         </div>
+        <ul layout:fragment="tabs" class="nav nav-tabs">
+        </ul>
         <div layout:fragment="main-content" class="container jumbotron">
             <button id="add-news" type="button" class="btn btn-success">Добавить</button>
         </div>
