--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -1,71 +1,72 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="main::head"></head>
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="http://www.thymeleaf.org"
+      layout:decorate="~{admin-layout}">
+<head>
+    <title>Пользователи</title>
+</head>
 <body>
-<nav th:replace="main::adminnav('users')"></nav>
-<div class="container">
-    <div class="row">
-        <div class="page-header">
-            <h2>Пользователи</h2>
-        </div>
-        <ul class="nav nav-tabs">
-            <li role="presentation" th:attr="class=((${filter} eq 'registered') ? 'active' : '')"><a href="/new/admin/users">Зарегистрированные</a></li>
-            <li role="presentation" th:attr="class=((${filter} eq 'all') ? 'active' : '')"><a href="/new/admin/users/all">Все</a></li>
-        </ul>
-        <div class="container jumbotron">
-            <table class="table table-bordered table-responsive" id="teams-table">
-                <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Логин</th>
-                    <th>Имя</th>
-                    <th>FA_ID</th>
-                    <th>Действия</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="user : ${users}">
-                    <td th:text="${user.id}"></td>
-                    <td th:text="${user.login}"></td>
-                    <td th:text="${user.name}"></td>
-                    <td th:text="${user.faId}"></td>
-                    <td>
-                        <a href="/new/admin/user.html" th:href="@{/new/admin/user/{user_id}(user_id=${user.id})}">Редактировать</a>
-                        <a th:id="'remove-user-' + ${user.id}" href="#">Удалить</a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-            <button id="add-user" type="button" class="btn btn-success">Добавить</button>
-        </div>
-    </div>
+<nav layout:fragment="adminmenu" th:remove="tag">
+    <div th:replace="main::adminnav('users')"/>
+</nav>
+<h2 layout:fragment="main-title">Пользователи</h2>
+<ul layout:fragment="tabs" class="nav nav-tabs">
+    <li role="presentation" th:attr="class=((${filter} eq 'registered') ? 'active' : '')"><a href="/new/admin/users">Зарегистрированные</a>
+    </li>
+    <li role="presentation" th:attr="class=((${filter} eq 'all') ? 'active' : '')"><a
+            href="/new/admin/users/all">Все</a></li>
+</ul>
+
+<div layout:fragment="main-content" class="container jumbotron">
+    <table class="table table-bordered table-responsive" id="teams-table">
+        <thead>
+        <tr>
+            <th>#</th>
+            <th>Логин</th>
+            <th>Имя</th>
+            <th>FA_ID</th>
+            <th>Действия</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="user : ${users}">
+            <td th:text="${user.id}"></td>
+            <td th:text="${user.login}"></td>
+            <td th:text="${user.name}"></td>
+            <td th:text="${user.faId}"></td>
+            <td>
+                <a href="/new/admin/user.html"
+                   th:href="@{/new/admin/user/{user_id}(user_id=${user.id})}">Редактировать</a>
+                <a th:id="'remove-user-' + ${user.id}" href="#">Удалить</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <button id="add-user" type="button" class="btn btn-success">Добавить</button>
 </div>
-<footer th:replace="main::footer"></footer>
-<script src="/js/jquery-2.1.4.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/jquery.tabledit.js"></script>
-<script th:inline="javascript">
-    $(document).ready(function () {
-        $('#add-user').click(function () {
-            $.ajax({
-                url: '/new/admin/user',
-                type: 'PUT',
-                success: function(result) {
-                    location.reload();
-                }
+<div layout:fragment="script-after" th:remove="tag">
+    <script th:inline="javascript">
+        $(document).ready(function () {
+            $('#add-user').click(function () {
+                $.ajax({
+                    url: '/new/admin/user',
+                    type: 'PUT',
+                    success: function (result) {
+                        location.reload();
+                    }
+                });
             });
+            $("a[id^='remove-user-']").click(function () {
+                userId = this.id.substring(12);
+                $.ajax({
+                    url: '/new/admin/user/' + userId,
+                    type: 'DELETE',
+                    success: function (result) {
+                        location.reload();
+                    }
+                });
+            })
         });
-        $("a[id^='remove-user-']").click(function() {
-            userId = this.id.substring(12);
-            $.ajax({
-               url: '/new/admin/user/' + userId,
-                type: 'DELETE',
-                success: function(result) {
-                    location.reload();
-                }
-            });
-        })
-    });
-</script>
+    </script>
+</div>
 </body>
 </html>
