--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -48,7 +48,8 @@
             <li th:attr="class=((${pageType} eq 'users') ? 'active' : '')"><a href="/new/admin/users">Пользователи</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Логин</a></li>
+            <li th:if="${#authentication.name == 'anonymousUser'}"><a href="/new/login"><span class="glyphicon glyphicon-log-in"></span> Вход</a></li>
+            <li th:if="${#authentication.name != 'anonymousUser'}"><a href="/j_spring_security_logout" th:text="'Выход: ' + ${#authentication.name}"><span class="glyphicon glyphicon-log-in"></span>Выход: Login</a></li>
         </ul>
     </div>
 </nav>
