--- a/src/main/resources/templates/admin/team.html
+++ b/src/main/resources/templates/admin/team.html
@@ -32,7 +32,7 @@
     <button id="add-team" type="button" class="btn btn-success">Добавить</button>
 </div>
 <div layout:fragment="script-after" th:remove="tag">
-    <script th:inline="javascript">
+    <script th:inline="javascript" th:inline="none">
         $(document).ready(function () {
             $('#teams-table').Tabledit({
                 url: '/new/admin/country/[[${country.id}]]/team',
