--- a/src/main/resources/templates/photo.html
+++ b/src/main/resources/templates/photo.html
@@ -2,19 +2,12 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="http://www.thymeleaf.org"
       layout:decorate="~{main-layout}">
 <head>
-    <title>Новости</title>
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
-    <!-- Optional Bootstrap theme -->
-    <link rel="stylesheet" href="/css/bootstrap-theme.min.css"/>
-    <link rel="stylesheet" href="/css/jquery.dataTables.min.css"/>
-    <link rel="stylesheet" href="/css/jleague.css"/>
+    <title>Фото</title>
 </head>
 <body>
 <nav layout:fragment="mainmenu" th:remove="tag">
-    <div th:replace="main::mainmenu ('photo')"/>
+    <div th:replace="main::mainmenu('news')"/>
 </nav>
-<div class="container">
-<div class="col-md-1"></div>
 <div layout:fragment="content" class="col-md-8">
     <div class="container-fluid clearfix" style="padding:0; overflow:hidden">
         <div id="ib-main-wrapper" class="ib-main-wrapper kinetic-active" tabindex="0"
@@ -174,11 +167,5 @@
 
     </div>
 </div>
-</div>
-<div class="col-md-1"></div>
-<script src="/js/jquery-2.1.4.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/jquery.tabledit.min.js"></script>
-<script src="/js/jquery.dataTables.min.js"></script>
 </body>
 </html>
