--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,30 +10,6 @@
     <link rel="stylesheet" href="/css/jleague.css"/>
 </head>
 <body>
-<nav th:fragment="teamsnav" id="teams-nav" class="navbar navbar-default navbar-inverse navbar-static-top"
-     role="navigation">
-    <div class="navbar-header">
-        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-            <span class="sr-only">Toggle navigation</span>
-        </button>
-        <a href="/" class="navbar-brand">Японская лига FA13</a>
-    </div>
-    <div id="navbarCollapse" class="collapse navbar-collapse">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md-8">
-                    <ul class="nav navbar-nav">
-                        <li th:each="jTeam : ${japanTeams}">
-                            <a href="#"><img class="nav-emblem" src="" th:attr="src=${jTeam.emblem}"/></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-1"></div>
-            </div>
-        </div>
-    </div>
-</nav>
 <nav th:fragment="adminnav (pageType)" id="admin-nav" class="navbar navbar-static-top navbar-inverse"
      role="navigation">
     <div class="container-fluid">
@@ -48,6 +24,7 @@
             <li th:attr="class=((${pageType} eq 'users') ? 'active' : '')"><a href="/new/admin/users">Пользователи</a></li>
             <li th:attr="class=((${pageType} eq 'tasks') ? 'active' : '')"><a href="/new/admin/tasks">Задачи</a></li>
             <li th:attr="class=((${pageType} eq 'all') ? 'active' : '')"><a href="/new/admin/all">AllZip</a></li>
+            <li th:attr="class=((${pageType} eq 'calendar') ? 'active' : '')"><a href="/new/admin/calendar">Календарь</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li th:if="${#authentication.name == 'anonymousUser'}"><a href="/new/login"><span class="glyphicon glyphicon-log-in"></span> Вход</a></li>
