Improved calendar parser for new season

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -43,6 +43,8 @@
                         <li th:attr="class=((${pageType} eq 'news') ? 'active' : '')"><a href="/">Новости</a></li>
                         <li th:attr="class=((${pageType} eq 'transfer') ? 'active' : '')"><a
                                 href="/transfer">Трансфер</a></li>
+                        <li th:attr="class=((${pageType} eq 'transfer') ? 'active' : '')"><a
+                                href="/transfer">Прогнозы</a></li>
                         <li th:attr="class=((${pageType} eq 'teams') ? 'active' : '')"><a
                                 href="/teams">Команды</a></li>
                         <li><a href="/komandy">Видео матчей</a></li>
