--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,7 +37,7 @@
                                 </label>
                             </form>
                         </div>
-                        <a href="#" class="text-center new-account">Как зарегестрироваться? </a>
+                        <a href="/new/register" class="text-center new-account">Зарегистрироваться</a>
                     </div>
                     <div class="col-md-2"></div>
                 </div>
