--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -22,17 +22,17 @@
                             <img class="profile-img"
                                  src="/images/flag.jpg"
                                  alt=""/>
-                            <div class="text-danger" th:if="${registerError} eq 'already-registered'">
-                                Вы уже зарегистрированы. Если вы забыли пароль напшите администратору.
-                            </div>
-                            <div class="text-danger" th:if="${registerError} eq 'wrong-email'">
-                                В FA13 указан другой email. Укажите тот же email, что и в FA13.
-                            </div>
-                            <div class="text-danger" th:if="${registerError} eq 'no-fa-user'">
-                                Нет такого менеджера в FA13. Укажите логин тот же, что у вас в FA13.
-                            </div>
 
                             <form action="/new/register" class="form-signin" method="post">
+                                <p class="text-danger" th:if="${registerError} eq 'already-registered'">
+                                    Вы уже зарегистрированы. Если вы забыли пароль напишите администратору.
+                                </p>
+                                <p class="text-danger" th:if="${registerError} eq 'wrong-email'">
+                                    В FA13 указан другой email. Укажите тот же email, что и в FA13.
+                                </p>
+                                <p class="text-danger" th:if="${registerError} eq 'no-fa-user'">
+                                    Нет такого менеджера в FA13. Укажите логин тот же, что у вас в FA13. Регистр так же важен!
+                                </p>
                                 <input id="login" name="login" type="text" class="form-control" placeholder="Логин" required autofocus>
                                 <input id="email" name="email" type="text" class="form-control" placeholder="Email" required autofocus>
                                 <button class="btn btn-lg btn-primary btn-block" type="submit">
