Country and team download from new fa site

--- a/src/main/resources/templates/make-prediction.html
+++ b/src/main/resources/templates/make-prediction.html
@@ -2,7 +2,7 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="http://www.thymeleaf.org"
       layout:decorate="~{main-layout}">
 <head>
-    <title>Трансфер</title>
+    <title>Прогноз</title>
 </head>
 <body>
 <nav layout:fragment="mainmenu" th:remove="tag">
