--- a/src/main/resources/templates/main-layout.html
+++ b/src/main/resources/templates/main-layout.html
@@ -21,7 +21,8 @@
     <div id="navbarCollapse" class="collapse navbar-collapse">
         <div class="container">
             <div class="row">
-                <div class="col-md-11">
+                <div class="col-md-1"></div>
+                <div class="col-md-10 center-block" >
                     <ul class="nav navbar-nav">
                         <li th:each="jTeam : ${japanTeams}">
                             <a href="#"><img class="nav-emblem" src="" th:attr="src=${jTeam.emblem}"/></a>
